--- a/src/_includes/_footer.html
+++ b/src/_includes/_footer.html
@@ -9,15 +9,14 @@
 			<a href="https://twitter.com/share" class="twitter-share-button"
 				data-count="vertical"
 				data-text="れーみ&#x2606; official website"
-				data-url="http://remi-star.com"
+				data-url="http://www.remi-star.com"
 				>Tweet</a>
 			<div class="fb-share-button"
 				data-layout="box_count"
-				data-href="http://remi-star.com"
+				data-href="http://www.remi-star.com"
 			></div>
 		</div>
 		<p class="copyright">
-			Hosted on GitHub Pages<br />
 			<a href="{{ page.url | ptr }}/policy/">Site Policy</a> | 
 			Copyright &copy; re-mi<i class="fa fa-star-o"></i> All rights reserved.
 		</p>
