remove vertical margin

--- a/src/_compass/base.scss
+++ b/src/_compass/base.scss
@@ -27,7 +27,7 @@ section.main-content-outer {
 		padding: 12px 24px;
 	}
 	section.main-content {
-		margin: 24px;
+		margin: 0 24px;
 		box-sizing: border-box;
 	}
 }
