add description meta

--- a/src/_includes/_meta.html
+++ b/src/_includes/_meta.html
@@ -2,6 +2,11 @@
 <meta name="generator" content="Microsoft Visual Studio Code">
 <meta name="author" content="Yadex205 <yadex205@outlook.jp>">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
+{% if page.url == "/" %}
+<meta name="description" content="シンガーソングライターれーみ&#x2606;のOfficial Website.">
+<meta name="keywords" content="れーみ,れーみ☆,れーみ★,シンガーソングライター,キーボード,Key,ライブ">
+{% endif %}
+
 <link rel="stylesheet" href="{{ page.url | ptr }}/css/base.css">
 <link rel="stylesheet" href="{{ page.url | ptr }}/vendor/font-awesome/css/font-awesome.min.css">
 <link href='http://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
