--- a/src/_includes/_header.html
+++ b/src/_includes/_header.html
@@ -5,38 +5,13 @@
 		<span class="subtitle">official website</span>
 	</div>
 	<div class="menu">
-		<a href="{{ page.url | ptr }}/"
-			{% if page.name contains "index" %}
-			class="current"
-			{% endif %}
-			>top</a>
-		<a href="{{ page.url | ptr }}/news/"
-			{% if page.name contains "news" %}
-			class="current"
-			{% endif %}
-			>news</a>
-		<a href="{{ page.url | ptr }}/live"
-			{% if page.name contains "live" %}
-			class="current"
-			{% endif %}
-			>live</a>
-		<a href="{{ page.url | ptr }}/discography"
-			{% if page.name contains "discography" %}
-			class="current"
-			{% endif %}
-			>disco<br />graphy</a>
-		<a href="{{ page.url | ptr }}/biography"
-			{% if page.name contains "biography" %}
-			class="current"
-			{% endif %}
-			>bio<br />graphy</a>
-		<a href="http://ameblo.jp/remiriya27/"
-			target="_blank">blog <i class="fa fa-external-link-square"></i></a>
-		<a href="{{ page.url | ptr }}/contact"
-			{% if page.name contains "contact" %}
-			class="current"
-			{% endif %}
-			>contact</a>
+		<a href="{{ page.url | ptr }}/" {% if page.name contains "index" %}class="current"{% endif %}>top</a>
+		<a href="{{ page.url | ptr }}/news/" {% if page.name contains "news" %}class="current"{% endif %}>news</a>
+		<a href="{{ page.url | ptr }}/live" {% if page.name contains "live" %}class="current"{% endif %}>live</a>
+		<a href="{{ page.url | ptr }}/discography" {% if page.name contains "discography" %}class="current"{% endif %}>disco<br />graphy</a>
+		<a href="{{ page.url | ptr }}/biography" {% if page.name contains "biography" %}class="current"{% endif %}>bio<br />graphy</a>
+		<a href="http://ameblo.jp/remiriya27/" target="_blank">blog <i class="fa fa-external-link-square"></i></a>
+		<a href="{{ page.url | ptr }}/contact" {% if page.name contains "contact" %}class="current"{% endif %}>contact</a>
 	</div>
 	
 	<input type="checkbox" id="sp-menu-trigger">
@@ -44,37 +19,12 @@
 		<label for="sp-menu-trigger">
 			<i class="fa fa-list fa-lg"></i><br />
 		</label><br />
-		<a href="{{ page.url | ptr }}/"
-			{% if page.name contains "index" %}
-			class="current"
-			{% endif %}
-			>top</a><br />
-		<a href="{{ page.url | ptr }}/news/"
-			{% if page.name contains "news" %}
-			class="current"
-			{% endif %}
-			>news</a><br />
-		<a href="{{ page.url | ptr }}/live"
-			{% if page.name contains "live" %}
-			class="current"
-			{% endif %}
-			>live</a><br />
-		<a href="{{ page.url | ptr }}/discography"
-			{% if page.name contains "discography" %}
-			class="current"
-			{% endif %}
-			>discography</a><br />
-		<a href="{{ page.url | ptr }}/biography"
-			{% if page.name contains "biography" %}
-			class="current"
-			{% endif %}
-			>biography</a><br />
-		<a href="http://ameblo.jp/remiriya27/"
-			target="_blank">blog <i class="fa fa-external-link-square"></i></a><br />
-		<a href="{{ page.url | ptr }}/contact"
-			{% if page.name contains "contact" %}
-			class="current"
-			{% endif %}
-			>contact</a>
+		<a href="{{ page.url | ptr }}/" {% if page.name contains "index" %}class="current"{% endif %}>top</a><br />
+		<a href="{{ page.url | ptr }}/news/" {% if page.name contains "news" %}class="current"{% endif %}>news</a><br />
+		<a href="{{ page.url | ptr }}/live" {% if page.name contains "live" %}class="current"{% endif %}>live</a><br />
+		<a href="{{ page.url | ptr }}/discography" {% if page.name contains "discography" %}class="current"{% endif %}>discography</a><br />
+		<a href="{{ page.url | ptr }}/biography" {% if page.name contains "biography" %}class="current"{% endif %}>biography</a><br />
+		<a href="http://ameblo.jp/remiriya27/" target="_blank">blog <i class="fa fa-external-link-square"></i></a><br />
+		<a href="{{ page.url | ptr }}/contact" {% if page.name contains "contact" %}class="current"{% endif %}>contact</a>
 	</div>
 </header>
