--- a/src/_includes/_footer.html
+++ b/src/_includes/_footer.html
@@ -7,7 +7,8 @@
 			<a href="https://twitter.com/share" class="twitter-share-button" data-count="vertical" data-text="れーみ&#x2606; official website" data-url="http://www.remi-star.com">Tweet</a>
 		</div>
 		<p class="copyright">
-			<a href="{{ page.url | ptr }}/policy/">Site Policy</a> | Copyright &copy; re-mi<i class="fa fa-star-o"></i> All rights reserved.
+			<a href="{{ page.url | ptr }}/policy/">Site Policy</a><br />
+			Copyright &copy; re-mi<i class="fa fa-star-o"></i> All rights reserved.
 		</p>
 	</section>
 </footer>
