--- a/src/_includes/_meta.html
+++ b/src/_includes/_meta.html
@@ -32,6 +32,14 @@ window.twttr = (function(d, s, id) {
   return t;
 }(document, "script", "twitter-wjs"));
 </script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-58689033-2', 'auto');
+  ga('send', 'pageview');
+</script>
 {% if page.title == null %}
 <title>れーみ&#x2606; official website</title>
 {% else %}
